# IPC-ZeroMQ

./: CMakeLists.txt  README.md
gui/: CMakeLists.txt
gui/module/IPC/: IPCDelegate.cpp  IPCDelegate.h  common.h
gui/ui/: tmp.pro  widget.cpp  widget.h  widget.ui
server/: CMakeLists.txt  main.cpp
server/include/: common.h
